adding FitConstants that finds vfit constants. Adding new asymmetry program to use those constants, get asym from amp factor and integral, and re-introduce raw asymmetry. Some programs for polarization explorations.

--- a/07.18.24_final_asym_test2.ipynb
+++ b/07.18.24_final_asym_test2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fdf4de45",
    "metadata": {},
    "outputs": [
@@ -10,13 +10,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['La_sample', '_temp_xs.npy', 'runs11139-11412', 'runs11413-11726', 'runs11727-12033', 'runs12034-12363', 'runs12364-12684', 'runs13564-13604', 'runs13605-13735', 'runs13736-13851', 'runs88888-99999', 'testother', 'testother2', 'xs_cut.npy', 'xs_uncut.npy']\n",
+      "['La_sample', '_temp_xs.npy', 'runs07862-08069', 'runs09919-10159', 'runs11139-11412', 'runs11413-11726', 'runs11727-12033', 'runs12034-12363', 'runs12364-12684', 'runs13564-13604', 'runs13605-13735', 'runs13736-13851', 'runs13852-14191', 'runs16453-16763', 'runs88888-99999', 'testother', 'testother2', 'xs_cut.npy', 'xs_uncut.npy']\n",
       "runs12034-12363\n",
-      "5\n",
-      "5\n",
+      "7\n",
+      "7\n",
       "1\n",
       "13\n",
-      "8992\n",
+      "9000\n",
       "330\n",
       "330\n",
       "330\n"
@@ -50,8 +50,8 @@
     "print(start_i)\n",
     "print(end_i)\n",
     "print(len(search_arr[start_i:end_i+1]))\n",
-    "asymDendname = '/asym_D/'\n",
-    "asymUendname = '/asym_U/'\n",
+    "asymDendname = '/asym_D_08.14.24_WORKING/'\n",
+    "asymUendname = '/asym_U_08.14.24_WORKING/'\n",
     "# asymDendname = '/asym_D_08.14.24_WORKING/'\n",
     "# asymUendname = '/asym_U_08.14.24_WORKING/'\n",
     "# asymDendname = '/asym_D_08.12.24PM/'\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "630d4e75",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['La_sample', '_temp_xs.npy', 'runs11139-11412', 'runs11413-11726', 'runs11727-12033', 'runs12034-12363', 'runs12364-12684', 'runs13564-13604', 'runs13605-13735', 'runs13736-13851', 'runs88888-99999', 'testother', 'testother2', 'xs_cut.npy', 'xs_uncut.npy']\n"
+      "['La_sample', '_temp_xs.npy', 'runs07862-08069', 'runs09919-10159', 'runs11139-11412', 'runs11413-11726', 'runs11727-12033', 'runs12034-12363', 'runs12364-12684', 'runs13564-13604', 'runs13605-13735', 'runs13736-13851', 'runs13852-14191', 'runs16453-16763', 'runs88888-99999', 'testother', 'testother2', 'xs_cut.npy', 'xs_uncut.npy']\n"
      ]
     }
    ],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "817cb992",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "64d27baa",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
      "text": [
       "330\n",
       "13\n",
-      "8992\n"
+      "9000\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c53b3873",
    "metadata": {},
    "outputs": [
@@ -163,13 +163,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F:\\LANL/processed_data/runs12034-12363/asym_D/12034_asym_D.npy\n",
+      "F:\\LANL/processed_data/runs12034-12363/asym_D_08.14.24_WORKING/12034_asym_D.npy\n",
       "13\n",
-      "8992\n",
-      "[-0.09937447  0.02419563 -0.02942458 -0.03802697  0.03784847  0.04657454\n",
-      " -0.02549371 -0.07946779  0.02230997 -0.0710661 ]\n",
-      "[-0.09937447  0.02419563 -0.02942458 -0.03802697  0.03784847  0.04657454\n",
-      " -0.02549371 -0.07946779  0.02230997 -0.0710661 ]\n"
+      "9000\n",
+      "[ 0.03923327  0.0330707  -0.08345991 -0.07166464 -0.02424791 -0.01957413\n",
+      "  0.01052645  0.01260976  0.00125598  0.10232386]\n",
+      "[ 0.03923327  0.0330707  -0.08345991 -0.07166464 -0.02424791 -0.01957413\n",
+      "  0.01052645  0.01260976  0.00125598  0.10232386]\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "893d82da",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "35037682",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4fcb8504",
    "metadata": {},
    "outputs": [
@@ -297,30 +297,30 @@
      "text": [
       "330\n",
       "12\n",
-      "8992\n",
+      "9000\n",
       "330\n",
       "13\n",
-      "8992\n",
+      "9000\n",
       "330\n",
       "25\n",
-      "8992\n",
+      "9000\n",
       "25\n",
       "330\n",
-      "8992\n",
-      "[ 0.78821489  1.72549166  0.21434837 -9.2464711   0.8694651 ]\n",
-      "[ 0.78821489  1.72549166  0.21434837 -9.2464711   0.8694651 ]\n",
-      "[-0.3696336  -2.63165523 -0.3562221  -4.05589074 -0.10570474]\n",
+      "9000\n",
+      "[-0.40095296  1.29915345  0.82998986 -0.89521202 -0.04892795]\n",
+      "[-0.40095296  1.29915345  0.82998986 -0.89521202 -0.04892795]\n",
+      "[ 0.13138199 -1.67267996 -0.66031952  0.38404308 -3.26232164]\n",
       "\n",
-      "[ 0.00434295  0.06058495 -0.05801153 -0.07254333 -0.04353382]\n",
-      "[ 0.00434295  0.06058495 -0.05801153 -0.07254333 -0.04353382]\n",
+      "[ 0.0190473  -0.10587591  0.021884    0.02440265 -0.04884444]\n",
+      "[ 0.0190473  -0.10587591  0.021884    0.02440265 -0.04884444]\n",
       "\n",
-      "[-0.3696336  -2.63165523 -0.3562221  -4.05589074 -0.10570474]\n",
-      "[-0.3696336  -2.63165523 -0.3562221  -4.05589074 -0.10570474]\n",
-      "[-3.20628953  0.59161392 -0.42371559  0.13506454  0.41407705]\n",
-      "[-3.20628953  0.59161392 -0.42371559  0.13506454  0.41407705]\n",
+      "[ 0.13138199 -1.67267996 -0.66031952  0.38404308 -3.26232164]\n",
+      "[ 0.13138199 -1.67267996 -0.66031952  0.38404308 -3.26232164]\n",
+      "[ 0.16445791 -1.14435833  0.59852107 -7.05312326 -1.06024312]\n",
+      "[ 0.16445791 -1.14435833  0.59852107 -7.05312326 -1.06024312]\n",
       "\n",
-      "[ 0.00434295  0.06058495 -0.05801153 -0.07254333 -0.04353382]\n",
-      "[-0.25150481 -0.16778348 -0.20529678 -0.03452916 -0.06543253]\n"
+      "[ 0.0190473  -0.10587591  0.021884    0.02440265 -0.04884444]\n",
+      "[-0.00723119 -0.21523353 -0.20441511  1.15720577 -0.21184282]\n"
      ]
     }
    ],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "2f993263",
    "metadata": {},
    "outputs": [],
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "be7d6fa7",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
      "text": [
       "330\n",
       "13\n",
-      "8992\n"
+      "9000\n"
      ]
     }
    ],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "55c7e817",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a0cab2b3",
    "metadata": {},
    "outputs": [
@@ -481,11 +481,11 @@
       "21\n",
       "22\n",
       "23\n",
-      "8992\n",
-      "8992\n",
+      "9000\n",
+      "9000\n",
       "\n",
       "24\n",
-      "8992\n"
+      "9000\n"
      ]
     }
    ],
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "94c66c66",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "41a4e509",
    "metadata": {},
    "outputs": [
@@ -570,14 +570,14 @@
      "output_type": "stream",
      "text": [
       "330\n",
-      "[-0.00019757 -0.00019465 -0.00019407 -0.00019371 -0.00019399 -0.00019455\n",
-      " -0.00019413 -0.00019385 -0.00019371 -0.00019386]\n",
-      "[-0.00019757 -0.00019465 -0.00019407 -0.00019371 -0.00019399 -0.00019455\n",
-      " -0.00019413 -0.00019385 -0.00019371 -0.00019386]\n",
+      "[-0.00019739 -0.00019493 -0.00019349 -0.00019422 -0.00019638 -0.00019512\n",
+      " -0.00019456 -0.00019479 -0.00019415 -0.00019385]\n",
+      "[-0.00019739 -0.00019493 -0.00019349 -0.00019422 -0.00019638 -0.00019512\n",
+      " -0.00019456 -0.00019479 -0.00019415 -0.00019385]\n",
       "330\n",
       "0\n",
-      "0.4420277395433369\n",
-      "0.0013394779986161721\n"
+      "0.13468340116256292\n",
+      "0.0004081315186744347\n"
      ]
     }
    ],
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "d5c3213f",
    "metadata": {},
    "outputs": [
@@ -604,10 +604,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8992\n",
+      "9000\n",
+      "1125\n",
       "1124\n",
-      "1124\n",
-      "1124\n",
+      "1125\n",
       "1124\n"
      ]
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "0a852c18",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "af07a54e",
    "metadata": {},
    "outputs": [],
@@ -677,7 +677,7 @@
     "# plt.plot(xs_cut_rebin8, (All_Li6_asyms_rebin8), label='Li6, rebinning: ' + str(rebinf))\n",
     "\n",
     "# plt.plot(xs_uncut[0], NaI_asyms[7] , label='NaI D1')\n",
-    "plt.plot(d, b/24, label='All NaI')\n",
+    "plt.plot(d, b[:-1]/24, label='All NaI')\n",
     "\n",
     "# plt.plot(xs_uncut[0], All_Li6_asyms , label='6Li')\n",
     "# plt.plot(xs_cut, All_Li6_asyms/4275 , label='6Li')\n",
