--- a/10.21.24_final_asym_HDF5.ipynb
+++ b/10.21.24_final_asym_HDF5.ipynb
@@ -10,10 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['La_sample', '_temp_xs.npy', 'runs11139-11412', 'runs11413-11726', 'runs11727-12033', 'runs12034-12363', 'runs12364-12684', 'runs13564-13604', 'runs13605-13735', 'runs13736-13851', 'runs88888-99999', 'testother', 'testother2', 'xs_cut.npy', 'xs_uncut.npy']\n",
+      "['La_sample', '_temp_xs.npy', 'runs07862-08069', 'runs09919-10159', 'runs11139-11412', 'runs11413-11726', 'runs11727-12033', 'runs12034-12363', 'runs12364-12684', 'runs13564-13604', 'runs13605-13735', 'runs13736-13851', 'runs13852-14191', 'runs16453-16763', 'runs88888-99999', 'testother', 'testother2', 'xs_cut.npy', 'xs_uncut.npy']\n",
       "runs12034-12363\n",
-      "5\n",
-      "5\n",
+      "7\n",
+      "7\n",
       "1\n",
       "['runs12034-12363/']\n"
      ]
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "c87af1ad",
    "metadata": {},
    "outputs": [
@@ -114,11 +114,11 @@
      "text": [
       "['runs12034-12363/']\n",
       "['12034_asym_D.h5', '12035_asym_D.h5', '12036_asym_D.h5', '12037_asym_D.h5', '12038_asym_D.h5', '12039_asym_D.h5', '12040_asym_D.h5', '12041_asym_D.h5', '12042_asym_D.h5', '12043_asym_D.h5']\n",
-      "['12034_asym_bg_D.h5', '12035_asym_bg_D.h5', '12036_asym_bg_D.h5', '12037_asym_bg_D.h5', '12038_asym_bg_D.h5', '12039_asym_bg_D.h5', '12040_asym_bg_D.h5', '12041_asym_bg_D.h5', '12042_asym_bg_D.h5', '12043_asym_bg_D.h5']\n",
+      "[]\n",
       "330\n",
       "330\n",
-      "330\n",
-      "330\n"
+      "0\n",
+      "0\n"
      ]
     }
    ],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "fcacf3cb",
    "metadata": {},
    "outputs": [
@@ -144,14 +144,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "330 13 8992\n"
+      "330 12 2\n"
      ]
     }
    ],
    "source": [
     "folderpath = root+processedfolder+folderslist[0]\n",
     "with h5py.File(folderpath+'/asym_D/'+runslist_D[0], 'r') as f: ## new arr_sizer\n",
-    "    dataset = f['ch 00']\n",
+    "    dataset = f['ch_00']\n",
     "    channels = list(f.keys())\n",
     "    numchannels = len(channels)-1\n",
     "    data = np.array(dataset)\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "c5ff4ef6",
    "metadata": {},
    "outputs": [
@@ -171,6 +171,17 @@
      "output_type": "stream",
      "text": [
       "F:\\LANL/processed_data/runs12034-12363/\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'OFF'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_87436\\2771517368.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;31m#             data = np.array(dataset)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;31m#             rundat_asym.append(data)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m             \u001b[0mrun_asyms_D\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m         \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[0mfolderpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mroot\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mprocessedfolder\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mfolderslist\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m  \u001b[1;31m## generalize this to all folders\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: 'OFF'"
      ]
     }
    ],
@@ -224,23 +235,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "82f2d5e9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "xs \n",
-      "330 13 4811\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_87436\\1015021480.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mfolderpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mroot\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mprocessedfolder\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mfolderslist\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mh5py\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfolderpath\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'/asym_bg_D/'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mrunslist_bg_D\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m## new arr_sizer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mdataset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'ch_00'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mchannels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchannels\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
     "folderpath = root+processedfolder+folderslist[0]\n",
     "with h5py.File(folderpath+'/asym_bg_D/'+runslist_bg_D[0], 'r') as f: ## new arr_sizer\n",
-    "    dataset = f['ch 00']\n",
+    "    dataset = f['ch_00']\n",
     "    channels = list(f.keys())\n",
     "    print(channels[-1])\n",
     "    xsdataset = f[channels[-1]]\n",
