adding code to find Voigt fit constants, some final asymmetry code change, code to check for impurities.

--- a/06.26.25_pwave_search.ipynb
+++ b/06.26.25_pwave_search.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Searhing in array (sorted):  ['0_vparams_La.h5', 'La_sample', '_temp_xs.npy', 'runs07862-08069', 'runs09919-10159', 'runs11121-11138', 'runs11139-11412', 'runs11413-11726', 'runs11727-12033', 'runs12034-12363', 'runs12364-12684', 'runs12686-13279', 'runs13280-13563', 'runs13564-13604', 'runs13605-13735', 'runs13736-13851', 'runs13852-14191', 'runs14192-14499', 'runs14500-15106', 'runs15114-15568', 'runs15569-16110', 'runs16135-16392', 'runs16453-16763', 'runs88888-99999', 'xs_cut.npy', 'xs_uncut.npy']\n"
+      "Searhing in array (sorted):  ['0_vparams_La.h5', '1_vparams_Pr.h5', 'La_sample', '_temp_xs.npy', 'runs07862-08069', 'runs09919-10159', 'runs11121-11138', 'runs11139-11412', 'runs11413-11726', 'runs11727-12033', 'runs12034-12363', 'runs12364-12684', 'runs12686-13279', 'runs13280-13563', 'runs13564-13604', 'runs13605-13735', 'runs13736-13851', 'runs13852-14191', 'runs14192-14499', 'runs14500-15106', 'runs15114-15568', 'runs15569-16110', 'runs16135-16392', 'runs16453-16763', 'runs88888-99999', 'xs_cut.npy', 'xs_uncut.npy']\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indices in above array, starti-endi: 5-10, length 6\n",
+      "Indices in above array, starti-endi: 6-11, length 6\n",
       "6 folders, array of folders is:  ['runs11121-11138/', 'runs11139-11412/', 'runs11413-11726/', 'runs11727-12033/', 'runs12034-12363/', 'runs12364-12684/']\n",
       "Downstream total #runs: 1556,   upstream total: 1556\n"
      ]
@@ -129,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indices in above array, starti-endi: 11-13, length 3\n",
+      "Indices in above array, starti-endi: 12-14, length 3\n",
       "runs12686-13279/\n",
       "runs13280-13563/\n",
       "runs13564-13604/\n",
@@ -196,7 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indices in above array, starti-endi: 16-18, length 3\n",
+      "Indices in above array, starti-endi: 17-19, length 3\n",
       "runs13852-14191/\n",
       "runs14192-14499/\n",
       "runs14500-15106/\n",
@@ -263,7 +263,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indices in above array, starti-endi: 19-19, length 1\n",
+      "Indices in above array, starti-endi: 20-20, length 1\n",
       "1 folders, array of folders is:  ['runs15114-15568/']\n",
       "Downstream total #runs: 455,   upstream total: 455\n"
      ]
@@ -327,7 +327,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indices in above array, starti-endi: 20-20, length 1\n",
+      "Indices in above array, starti-endi: 21-21, length 1\n",
       "1 folders, array of folders is:  ['runs15569-16110/']\n",
       "Downstream total #runs: 532,   upstream total: 532\n"
      ]
@@ -391,7 +391,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indices in above array, starti-endi: 21-21, length 1\n",
+      "Indices in above array, starti-endi: 22-22, length 1\n",
       "1 folders, array of folders is:  ['runs16135-16392/']\n",
       "Downstream total #runs: 247,   upstream total: 247\n"
      ]
@@ -595,7 +595,7 @@
       "F:\\LANL/processed_data/runs11727-12033/ done\n",
       "F:\\LANL/processed_data/runs12034-12363/ done\n",
       "F:\\LANL/processed_data/runs12364-12684/ done\n",
-      "loaded La files time:  37.50147557258606 \n",
+      "loaded La files time:  139.16705012321472 \n",
       "\n"
      ]
     }
@@ -636,7 +636,7 @@
       "F:\\LANL/processed_data/runs12686-13279/ done\n",
       "F:\\LANL/processed_data/runs13280-13563/ done\n",
       "F:\\LANL/processed_data/runs13564-13604/ done\n",
-      "loaded Pr files time:  10.858299732208252 \n",
+      "loaded Pr files time:  3.1767101287841797 \n",
       "\n"
      ]
     }
@@ -677,7 +677,7 @@
       "F:\\LANL/processed_data/runs13852-14191/ done\n",
       "F:\\LANL/processed_data/runs14192-14499/ done\n",
       "F:\\LANL/processed_data/runs14500-15106/ done\n",
-      "loaded Tb files time:  31.712973833084106 \n",
+      "loaded Tb files time:  117.5870749950409 \n",
       "\n"
      ]
     }
@@ -716,7 +716,7 @@
      "output_type": "stream",
      "text": [
       "F:\\LANL/processed_data/runs15569-16110/ done\n",
-      "loaded Tm files time:  13.186765670776367 \n",
+      "loaded Tm files time:  47.772587060928345 \n",
       "\n"
      ]
     }
@@ -755,7 +755,7 @@
      "output_type": "stream",
      "text": [
       "F:\\LANL/processed_data/runs15114-15568/ done\n",
-      "loaded Ho files time:  10.354105472564697 \n",
+      "loaded Ho files time:  40.65443396568298 \n",
       "\n"
      ]
     }
@@ -794,7 +794,7 @@
      "output_type": "stream",
      "text": [
       "F:\\LANL/processed_data/runs16135-16392/ done\n",
-      "loaded Yb files time:  6.4864349365234375 \n",
+      "loaded Yb files time:  21.8593692779541 \n",
       "\n"
      ]
     }
@@ -992,51 +992,51 @@
       "12\n",
       "La\n",
       "number of runs: 1556\n",
-      "to run 311 took another 0.06904911994934082\n",
-      "to run 622 took another 0.06742000579833984\n",
-      "to run 933 took another 0.06079816818237305\n",
-      "to run 1244 took another 0.06744575500488281\n",
+      "to run 311 took another 0.06897091865539551\n",
+      "to run 622 took another 0.06778144836425781\n",
+      "to run 933 took another 0.0703740119934082\n",
+      "to run 1244 took another 0.07105207443237305\n",
       "(13, 8992)\n",
       "(25, 8992) \n",
       "\n",
       "Pr\n",
       "number of runs: 448\n",
-      "to run 89 took another 0.014817237854003906\n",
-      "to run 178 took another 0.01579880714416504\n",
-      "to run 268 took another 0.023093223571777344\n",
-      "to run 358 took another 0.021512508392333984\n",
+      "to run 89 took another 0.019412517547607422\n",
+      "to run 178 took another 0.01792740821838379\n",
+      "to run 268 took another 0.020915985107421875\n",
+      "to run 358 took another 0.019757509231567383\n",
       "(25, 8992) \n",
       "\n",
       "Tb\n",
       "number of runs: 1240\n",
-      "to run 248 took another 0.045806169509887695\n",
-      "to run 496 took another 0.04581308364868164\n",
-      "to run 744 took another 0.04499053955078125\n",
-      "to run 992 took another 0.044382572174072266\n",
+      "to run 248 took another 0.047235727310180664\n",
+      "to run 496 took another 0.049841880798339844\n",
+      "to run 744 took another 0.05284857749938965\n",
+      "to run 992 took another 0.047751665115356445\n",
       "(25, 8992) \n",
       "\n",
       "Tm\n",
       "number of runs: 532\n",
-      "to run 106 took another 0.020092248916625977\n",
-      "to run 212 took another 0.020482540130615234\n",
-      "to run 319 took another 0.021175146102905273\n",
-      "to run 425 took another 0.022338151931762695\n",
+      "to run 106 took another 0.019448280334472656\n",
+      "to run 212 took another 0.018016815185546875\n",
+      "to run 319 took another 0.019002199172973633\n",
+      "to run 425 took another 0.0186307430267334\n",
       "(25, 8992) \n",
       "\n",
       "Ho\n",
       "number of runs: 455\n",
-      "to run 91 took another 0.01733684539794922\n",
-      "to run 182 took another 0.018532276153564453\n",
-      "to run 273 took another 0.02375960350036621\n",
-      "to run 364 took another 0.023948192596435547\n",
+      "to run 91 took another 0.019568681716918945\n",
+      "to run 182 took another 0.020507335662841797\n",
+      "to run 273 took another 0.021478891372680664\n",
+      "to run 364 took another 0.020167827606201172\n",
       "(25, 8992) \n",
       "\n",
       "Yb\n",
       "number of runs: 247\n",
-      "to run 49 took another 0.009734630584716797\n",
-      "to run 98 took another 0.010082721710205078\n",
-      "to run 148 took another 0.009918212890625\n",
-      "to run 197 took another 0.010344266891479492\n",
+      "to run 49 took another 0.00850820541381836\n",
+      "to run 98 took another 0.008367300033569336\n",
+      "to run 148 took another 0.009086370468139648\n",
+      "to run 197 took another 0.009947776794433594\n",
       "(25, 8992) \n",
       "\n"
      ]
@@ -1044,7 +1044,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15d63dd5f90>]"
+       "[<matplotlib.lines.Line2D at 0x16417ffe850>]"
       ]
      },
      "execution_count": 21,
@@ -1169,7 +1169,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15fb634ac10>]"
+       "[<matplotlib.lines.Line2D at 0x166b50b74d0>]"
       ]
      },
      "execution_count": 23,
@@ -1218,14 +1218,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gabeo\\AppData\\Local\\Temp\\ipykernel_17732\\2171555858.py:9: RuntimeWarning: divide by zero encountered in divide\n",
+      "C:\\Users\\gabeo\\AppData\\Local\\Temp\\ipykernel_1912\\2171555858.py:9: RuntimeWarning: divide by zero encountered in divide\n",
       "  x_eV_out = 0.5*m_n*((FPlength/((xtof+delay)/1000)))**2*J_to_eV  ## tof in ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15fb63daad0>]"
+       "[<matplotlib.lines.Line2D at 0x166b5137390>]"
       ]
      },
      "execution_count": 24,
@@ -2060,10 +2060,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "3096c829-7a50-473b-8d54-3675f183a819",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mmatplotlib\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mqt\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m fig, ax1 = \u001b[43mplt\u001b[49m.subplots(figsize=(\u001b[32m10\u001b[39m,\u001b[32m6.5\u001b[39m))\n\u001b[32m      3\u001b[39m plt.tight_layout(rect=[\u001b[32m0.125\u001b[39m, \u001b[32m0.130\u001b[39m, \u001b[32m0.875\u001b[39m, \u001b[32m0.920\u001b[39m])  \u001b[38;5;66;03m## left bottom right \u001b[39;00m\n\u001b[32m      4\u001b[39m lw = \u001b[32m1.2\u001b[39m\n",
+      "\u001b[31mNameError\u001b[39m: name 'plt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib qt\n",
     "fig, ax1 = plt.subplots(figsize=(10,6.5))\n",
